S13nSW: Don't delete ServiceWorkerSubresourceLoader twice

Before this CL, DeleteSoon() could be called twice when a
connection error happens on |url_loader_binding_|.
- ServiceWorkerSubresourceLoader sets DeleteSoon() as the connection
  error handler.
- The class also calls DeleteSoon() when the loader is no longer needed.
  For example, it delete itself when a request falls back to network.

After this CL we just call delete directly as needed.
Existing DeleteSoon() is renamed to OnConnectionError() as it is only
used as the connection error handler.

Bug: 828257
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_mojo
Change-Id: I85737d0d6c33b747a4f70f5156b2b3b4b512f873
Reviewed-on: https://chromium-review.googlesource.com/997256
Commit-Queue: Kenichi Ishibashi <bashi@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548708}
Former-commit-id: 2ad1f83a5d6e0008a11822e1b30a1c24b03e23e6